# AIE_AIForGames

./: .gitignore  .gitmodules  2020 ICT50215 Artificial Intelligence for Games - Project Evaluation Report Template.docx  2020 ICT50215 Artificial Intelligence for Games - TDD Template.docx  AI for Games - Project Research Workbook.docx  AI for Games - Research Workbook.docx  CMakeLists.txt  README.md  SystemsPlanning.drawio  Technical Design Document.docx  ~$ for Games - Research Workbook.docx  ~$20 ICT50215 Artificial Intelligence for Games - Project Evaluation Report Template.docx  ~$20 ICT50215 Artificial Intelligence for Games - TDD Template.docx
Game/: CMakeLists.txt
Game/assets/: Default.map
Game/assets/Sprites/JesseM/: Itch.IO.url
Game/assets/Sprites/PixelNauta/: Itch.IO.url
Game/include/: Animal.hpp  Game.hpp  Map.hpp
Game/include/Animals/: Animal.hpp
Game/include/Components/: AgentComponent.hpp  TargetComponent.hpp
Game/include/Systems/: AgentStateSystem.hpp  AgentSystem.hpp
Game/src/: Animal.cpp  Game.cpp  Map.cpp
Game/src/Animals/: Animal.cpp
Game/src/Systems/: AgentSystem.cpp
GameEngine/: CMakeLists.txt
GameEngine/include/GameEngine/: ResourceManager.hpp
GameEngine/modules/EntityComponentSystem/include/ECS/: world.hpp
GameEngine/modules/EntityComponentSystem/src/: world.cpp
GameEngine/src/: ResourceManager.cpp
GameEngine/src/Systems/: SpriteRenderSystem.cpp
GameFramework/: CMakeLists.txt
GameFramework/include/Framework/: GameObject.hpp  PhysicsBody.hpp  PhysicsWorld.hpp  Vec2.hpp
GameFramework/include/Framework/BehaviourTrees/: BehaviourTree.hpp  BehaviourTreeDecision.hpp  BehaviourTreeNodes.hpp
GameFramework/include/Framework/BehaviourTrees/Actions/: CallFunction.hpp  CanSee.hpp  CanSeeTarget.hpp  FindClosest.hpp  FindClosestNavigatable.hpp  FindFirst.hpp  FindPath.hpp  LimitTime.hpp  Move.hpp  MoveTowards.hpp  NavigatePath.hpp  PlaySound.hpp  SetValue.hpp  ValueExists.hpp  Wait.hpp  WithinDistance.hpp
GameFramework/include/Framework/GameObjects/: AnimatedSprite.hpp  Sprite.hpp
GameFramework/include/Framework/Pathfinding/: AStar.hpp  PathFindingGrid.hpp
GameFramework/src/: GameObject.cpp  PhysicsWorld.cpp  Vec2.cpp
GameFramework/src/BehaviourTrees/: BehaviourTree.cpp  BehaviourTreeNodes.cpp
GameFramework/src/BehaviourTrees/Actions/: CallFunction.cpp  CanSee.cpp  CanSeeTarget.cpp  FindClosest.cpp  FindClosestNavigatable.cpp  FindFirst.cpp  FindPath.cpp  LimitTime.cpp  Move.cpp  MoveTowards.cpp  NavigatePath.cpp  PlaySound.cpp  SetValue.cpp  ValueExists.cpp  Wait.cpp  WithinDistance.cpp
GameFramework/src/GameObjects/: AnimatedSprite.cpp  Sprite.cpp
GameFramework/src/Pathfinding/: AStar.cpp  PathFindingGrid.cpp
